// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EdiTableCell component should render a disabled editable cell 1`] = `
<div
  className="editable-cell"
  data-testid="editable-cell"
>
  <div
    className="editable-cell__value"
    title="0.00"
  >
    <span
      className="text"
    >
      0.00
    </span>
  </div>
</div>
`;

exports[`EdiTableCell component should render editable cell with null value : '-' 1`] = `
<div
  className="editable-cell empty"
  data-testid="editable-cell"
  onClick={[Function]}
>
  <div
    className="editable-cell__value"
    title="-"
  >
    <span
      className="text"
    >
      -
    </span>
  </div>
</div>
`;

exports[`EdiTableCell component should render editable cell with percentage value : '100.00 %' 1`] = `
<div
  className="editable-cell"
  data-testid="editable-cell"
  onClick={[Function]}
>
  <div
    className="editable-cell__value"
    title="100.00%"
  >
    <span
      className="text"
    >
      100.00%
    </span>
  </div>
</div>
`;

exports[`EdiTableCell component should render edited cell 1`] = `
<div
  className="editable-cell"
  data-testid="editable-cell"
  onClick={[Function]}
>
  <div
    className="editable-cell__value edited-cell"
    title="50.00"
  >
    <span
      className="text"
    >
      50.00
    </span>
  </div>
</div>
`;

exports[`EdiTableCell component should render the default editable cell 1`] = `
<div
  className="editable-cell"
  data-testid="editable-cell"
  onClick={[Function]}
>
  <div
    className="editable-cell__value"
    title="0.00"
  >
    <span
      className="text"
    >
      0.00
    </span>
  </div>
</div>
`;
